# dont_forget

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: docker-entrypoint.sh
backend/api/: admin.py  api.py
backend/api/migrations/: 0001_initial.py  0002_alter_historicallistcustomization_stocked_and_more.py  0002_alter_historicalunitofmeasure_created_at_and_more.py  0003_alter_historicallistcustomization_default_quantity_and_more.py  0003_alter_historicalunitofmeasure_created_at_and_more.py  0004_alter_historicalunitofmeasure_created_at_and_more.py  0005_category_historicalcategory_category_category_name.py  0006_alter_category_options_and_more.py  0007_historicalitem_historicalshoppinglist_item_and_more.py  0008_historicallistcustomization_listcustomization_and_more.py  0009_historicallistitem_listitem_and_more.py  0010_alter_category_options_and_more.py  0011_remove_category_deleted_at_remove_category_is_active_and_more.py
backend/api/models/: __init__.py  category.py  item.py  list_customization.py  list_item.py  shopping_list.py  shopping_list_group.py  unit_of_measure.py  user.py
backend/api/schemas/: __init__.py  category.py  item.py  list_customization.py  list_functions.py  list_item.py  shopping_list.py  shopping_list_group.py  unit_of_measure.py  user.py
backend/api/views/: __init__.py  category.py  item.py  list_customization.py  list_functions.py  list_item.py  shopping_list.py  shopping_list_group.py  unit_of_measure.py  user.py
backend/content/: urls.py
backend/scripts/: load_data.py
backend/scripts/api/: load_categories.py  load_data.py  load_uom.py
backend/shopping_list/: asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: base.html  home.html  navbar.html
frontend/: capacitor.config.ts  index.html  ionic.config.json  orval.config.cjs  orval.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  routes.ts  theme.tsx
frontend/src/components/: Header.tsx  Menu.css  Menu.tsx  SideMenu.tsx  card.tsx  credenza.tsx  form.tsx  nav.tsx  password-input.tsx  protected-route.tsx  sidebar-layout.tsx  sidebar.tsx  user-nav.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: sidelinks.tsx
frontend/src/hooks/: use-is-collapsed.tsx  use-local-storage.tsx  useSecureStorage.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Settings.tsx
frontend/src/router/: router.tsx
frontend/src/routes/: __root.tsx  about.tsx  index.tsx  login.tsx  register.tsx
proxy/: Dockerfile  default.conf
(+152 files in other folders)
