[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dont_forget"
version = "0.0.1"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "cffi==1.16.0",
    "contextlib2==21.6.0",
    "cryptography==43.0.0",
    "diff-match-patch==20241021",
    "Django==5.1.*",
    "django-bootstrap5==24.*",
    "django-cors-headers==4.6.*",
    "django-environ==0.11.*",
    "django-extensions==3.2.*",
    "django-import-export==4.3.*",
    "django-ninja==1.3.0",
    "django-ninja-crud==0.6.*",
    "django-ninja-extra==0.22.*",
    "django-ninja-jwt==5.3.*",
    "django-simple-history==3.7.*",
    "injector==0.22.0",
    "pillow==11.1.*",
    "psycopg==3.2.*",
    "psycopg-c==3.2.*",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "PyJWT==2.10.*",
    "sqlparse==0.5.*",
    "tablib==3.7.*",
    "typing_extensions==4.12.*",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "Flake8-pyproject",
  "isort",
  "pyproject-Flake8",
  "pre-commit",
  "djlint"
]

[tool.isort]
profile = "black"
line_length = 125

[tool.black]
line-length = 125
skip-string-normalization = 1

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 125
count = true